<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/list_image_size"
        android:layout_height="@dimen/list_image_size"
        android:padding="@dimen/list_image_padding"
        android:src="@drawable/ic_circle"
        android:id="@+id/list_imageView"
        android:contentDescription="@string/image_contentDescription"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/list_body2"
            android:text="@string/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:id="@+id/list_caption"
            android:text="@string/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:fontFamily="sans-serif"
            android:singleLine="true" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/list_icon_size"
        android:layout_height="@dimen/list_icon_size"
        android:padding="@dimen/list_icon_padding"
        android:id="@+id/list_icon"
        android:src="@drawable/ic_info_grey600_48dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/icon_contentDescription" />


</LinearLayout>